# flexi

./: CMakeLists.txt  README.md
.github/workflows/: simple_cmake.yml
examples/: CMakeLists.txt  example.cpp
examples/include/: example.h
src/: CMakeLists.txt  flexibleObjects.hpp  logging.cpp
src/include/: flexibleObjects.h  flexibleObjects.hpp  logging.h
